# openstream-hub

./: .gitignore  docker-compose.yml  epg.xml
.github/workflows/: backend.yml
backend/: .env  Dockerfile  alembic.ini  openstream.db  pyproject.toml  requirements.txt
backend/migrations/: env.py  env.py.save
backend/migrations/versions/: 4be70d284c21_create_playlist_and_channel_tables.py  5c735d4629b1_add_epg_sources.py  7e02486d2287_initial_schema.py  ebcdf48bf2e1_add_epg_channel_id.py
backend/openstream/: main.py
backend/openstream/api/: app.py  dependencies.py
backend/openstream/api/routers/: __init__.py  channels.py  epg.py  metadata.py  playlists.py  system.py
backend/openstream/api/schemas/: channel.py
backend/openstream/cli/: main.py
backend/openstream/cli/commands/: import_epg.py  match.py  stats.py
backend/openstream/config/: epg_sources.py
backend/openstream/core/: config.py
backend/openstream/database/: init_db.py  session.py
backend/openstream/epg/: aliases.py  epg_downloader.py  matcher.py  parser.py  utils.py
backend/openstream/models/: __init__.py  channel.py  epg_channel.py  epg_source.py  playlist.py  programme.py
backend/openstream/providers/epg/: base.py  india.py  providers.py
backend/openstream/repositories/: base.py  channel_repository.py  epg_repository.py  epg_source_repository.py  metadata_repository.py  playlist_repository.py
backend/openstream/routers/: channels.py  metadata.py  playlists.py
backend/openstream/schemas/: channel.py  imports.py  metadata.py  playlist.py  programme.py
backend/openstream/services/: channel_matcher.py  channel_service.py  downloader.py  epg_downloader.py  epg_manager.py  epg_parser.py  epg_service.py  import_service.py  m3u_parser.py  metadata_service.py  playlist_service.py
backend/openstream/utils/: m3u_parser.py
backend/tests/: test_downloader.py  test_health.py  test_m3u_parser.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: categories.ts  channel.ts  channels.ts  client.ts
frontend/src/components/: RecentChannelsRow.tsx  VideoPlayer.tsx
frontend/src/hooks/: useCategories.ts  useChannel.ts  useChannels.ts  useDebounce.ts  (+3 more)
scripts/: ingest_epg.py
(+20 files in other folders)
