[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openstream-hub"
version = "0.1.0"
description = "OpenStream Hub Backend"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.2",
]

[project.scripts]
openstream = "openstream.cli.main:main"

[tool.setuptools]
packages = ["openstream"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
